<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_savings"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_savings" />
        <item
            android:id="@+id/nav_loans"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_loans" />
        <item
            android:id="@+id/nav_guarantors"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_guarantors" />
    </group>
</menu>