<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.transactions.TransferFragment">

    <TextView
        android:id="@+id/text_transfer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_transfer_funds"
        android:textColor="@color/text_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_recipient"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/label_recipient_email"
        app:layout_constraintTop_toBottomOf="@id/text_transfer_title"
        app:startIconDrawable="@android:drawable/ic_menu_send">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_recipient_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_amount_transfer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_enter_amount"
        app:layout_constraintTop_toBottomOf="@id/til_recipient"
        app:prefixText="UGX ">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_amount_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm_transfer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_transfer_funds"
        app:layout_constraintTop_toBottomOf="@id/til_amount_transfer"
        app:cornerRadius="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>